--- a/locales/en.yml
+++ b/locales/en.yml
@@ -9,12 +9,14 @@
     errors:
       response_failure: "Cannot handle response: %1"
       open_failure: "Cannot open URL %1: %2"
+      interrupted: "Authentication interrupted by the user."
     template: "This window will close in few moments. If this doesn't happens you can close it by yourself, this won't cause any problem."
     application_description: "A local callback server for oAuth web-flow."
     application_help_url: "The URL where to send the user to start authorization."
     application_help_host: "The host address on which listening for the reply. Default is localhost."
     application_help_port: "The port on which listening for the reply. Default is 777`."
     application_help_command: "The command to open the URL. {{URL} is replaced with the specified URL. Default is 'open \"{{URL}}\"'."
+    application_help_no_callback: "Do not append the \"oauth_callback\" parameter to the URL."
     application_help_timeout: "The amount of seconds to wait for response from the remote endpoint before returning a failure."
     application_help_quiet: "Do not print anything but errors."
     application_meta_port: "PORT"
