--- a/locales/it.yml
+++ b/locales/it.yml
@@ -9,12 +9,14 @@
     errors:
       response_failure: "Impossibile gestire una risposta: %1"
       open_failure: "Impossible aprire l'URL %1: %2"
+      interrupted: "Autenticazione interrotta dall'utente."
     template: "Questa finestra si chiuderà in pochi momenti. Se non succede puoi chiuderla da solo, ciò non causerà alcun problema."
     application_description: "Un server callback locale per il web-flow oAuth."
     application_help_url: "L'URL dove mandare l'utente per iniziare l'autenticazione."
     application_help_host: "L'indirizzo host dove rimanere in ascolto per la risposta. Il default è localhost."
     application_help_port: "La porta dove rimanere in ascolto per la risposta. La porta di default è 7772."
     application_help_command: "Il comando per aprire l'URL. {{URL}} è sostituito con l'URL specificato. Il default è 'open \"{{URL}}\"'."
+    application_help_no_callback: "Non aggiungere il parametro \"oauth_callback\" all'URL."
     application_help_timeout: "Il numero di secondi da attendere per la risposta dall'endpoint remoto prima di ritornare un fallimento."
     application_help_quiet: "Non mostrare nulla tranne che gli errori."
     application_meta_port: "PORTA"
